Identify PDF file being printed by checking URL

There are two cases that PDF files are being printed: from print
preview or directly from PDF plugin extension. Our previous way of
identifying a PDF file being printed replies on the printed
document's setting 'is_modifiable' is correctly set up. However,
it was only set up when print preview is enabled, not when using
system dialog. This CL fixed that by directly checking the web URL.

Also since the web url can be checked for print preview, we no
longer need to keep the flag 'for_preview' inside print composite
client. So removed that.

BUG=820143

Change-Id: I8c9051d5e2945b1d5a4b9f74494fbe3f6ad795f2
Reviewed-on: https://chromium-review.googlesource.com/958298
Commit-Queue: Wei Li <weili@chromium.org>
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542630}
Former-commit-id: 68aabd926591afe79a3aa464ebb3eba038295b73