chrome/browser/printing/print_preview_dialog_controller.cc
@@ -378,7 +378,7 @@ WebContents* PrintPreviewDialogController::CreatePrintPreviewDialog(
   content::HostZoomMap::Get(preview_dialog->GetSiteInstance())
       ->SetZoomLevelForHostAndScheme(print_url.scheme(), print_url.host(), 0);
   PrintViewManager::CreateForWebContents(preview_dialog);
-  CreateCompositeClientIfNeeded(preview_dialog, true /* for_preview */);
+  CreateCompositeClientIfNeeded(preview_dialog);
   extensions::ChromeExtensionWebContentsObserver::CreateForWebContents(
       preview_dialog);
 
