chrome/browser/printing/print_view_manager_common.cc
@@ -5,9 +5,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "chrome/browser/printing/print_view_manager_common.h"
 
+#include "chrome/common/webui_url_constants.h"
 #include "content/public/browser/render_frame_host.h"
 #include "extensions/buildflags/buildflags.h"
+#include "extensions/common/constants.h"
 #include "printing/features/features.h"
+#include "url/gurl.h"
 
 #if BUILDFLAG(ENABLE_EXTENSIONS)
 #include "components/guest_view/browser/guest_view_manager.h"
@@ -121,6 +124,14 @@ content::RenderFrameHost* GetFrameToPrint(content::WebContents* contents) {
   return (focused_frame && focused_frame->HasSelection())
              ? focused_frame
              : contents->GetMainFrame();
+}
+
+bool PrintingPdfContent(content::RenderFrameHost* rfh) {
+  GURL url = rfh->GetLastCommittedURL();
+  // Whether it is inside print preview or pdf plugin extension.
+  return url.GetOrigin() == chrome::kChromeUIPrintURL ||
+         (url.SchemeIs(extensions::kExtensionScheme) &&
+          url.host_piece() == extension_misc::kPdfExtensionId);
 }
 
 }  // namespace printing
