chrome/browser/printing/print_view_manager_common.h
@@ -28,6 +28,13 @@ void StartBasicPrint(content::WebContents* contents);
 // frame (this makes print selection work for multiple frames).
 content::RenderFrameHost* GetFrameToPrint(content::WebContents* contents);
 
+// Whether the content sent to |rfh| is in PDF format.
+// When print preview dialog is printed, the content returned is always
+// in PDF format because print preview already stores the PDF file for
+// the previewed web page; When a full page PDF plugin is printed, the document
+// in it is in PDF format so will return in PDF also.
+bool PrintingPdfContent(content::RenderFrameHost* rfh);
+
 }  // namespace printing
 
 #endif  // CHROME_BROWSER_PRINTING_PRINT_VIEW_MANAGER_COMMON_H_
