chrome/browser/printing/printing_init.cc
@@ -24,7 +24,7 @@ void InitializePrinting(content::WebContents* web_contents) {
 #else
   printing::PrintViewManagerBasic::CreateForWebContents(web_contents);
 #endif  // BUILDFLAG(ENABLE_PRINT_PREVIEW)
-  CreateCompositeClientIfNeeded(web_contents, false /* for_preview */);
+  CreateCompositeClientIfNeeded(web_contents);
 }
 
 }  // namespace printing
